retrieve data from file
